Password visibility switch, input value overflow fix

--- a/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
+++ b/projects/storefrontstyles/scss/cxbase/blocks/forms.scss
@@ -503,3 +503,12 @@ form {
     }
   }
 }
+
+input[cxpasswordvisibilityswitch] {
+  @include forFeature('a11yPasswordVisibliltyBtnValueOverflow') {
+    $password-visibbility-btn-width: 30px;
+    padding-inline-end: calc(
+      $password-visibbility-btn-width + $input-padding-x
+    );
+  }
+}
